--- a/package.json
+++ b/package.json
@@ -10,10 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^23.1.1",
+    "@react-native-firebase/auth": "^23.1.1",
+    "@react-native-firebase/database": "^23.1.1",
+    "@react-native-vector-icons/material-design-icons": "^12.3.0",
+    "@react-native/new-app-screen": "0.81.0",
+    "@react-navigation/bottom-tabs": "^7.4.6",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.25",
     "react": "19.1.0",
     "react-native": "0.81.0",
-    "@react-native/new-app-screen": "0.81.0",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-date-picker": "^5.0.13",
+    "react-native-google-mobile-ads": "^15.6.0",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-paper": "^5.14.5",
+    "react-native-popup-menu": "^0.18.0",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
